# measured-future-rs

./: .gitignore  Cargo.toml
examples/: 01.rs  02.rs  03.rs  04.rs
src/: installing_future.rs  installing_future_exts.rs  lib.rs  measured_future.rs  measured_future_ext.rs  measured_future_exts.rs  meter.rs  metric_sink.rs  metric_sink_exts.rs  prelude.rs  report.rs  reporting_future.rs  reporting_future_ext.rs  reporting_future_exts.rs  spawned_future.rs
src/acc/: acc.rs  frame.rs  mod.rs
src/measured_future/: impl_future.rs  impl_measured_future.rs  mod.rs
src/meters/: mod.rs
src/meters/default_meter/: default_meter_report.rs  impl_default_meter.rs  impl_from_static_str.rs  impl_meter.rs  mod.rs
src/report_sink/: boxed.rs  current.rs  mod.rs
src/report_sinks/: default.rs  discarding.rs  dumping_to_stdout.rs  mod.rs  mpsc.rs  mpsc_bounded.rs  mpsc_unbounded.rs
src/report_sinks/aggregating/: aggregated_report.rs  impl_aggregating.rs  impl_clone.rs  impl_debug.rs  impl_report_sink.rs  mod.rs
src/report_sinks/default/: aggregator.rs  mod.rs
src/report_sinks/treemap/: mod.rs
src/reporting_future/: impl_future.rs  impl_reporting_future.rs  mod.rs
src/sink/: factory.rs  mod.rs
src/storage/: frame.rs  mod.rs  report.rs  state.rs
tests/: 01-should-compile.rs
