[package]
name = "measured-future-rs"
version = "0.3.1"
authors = ["Roman Gafiyatullin <r.gafiyatullin@me.com>"]
edition = "2018"
description = "A wrapper for std::future::Future that measures the CPU-time it takes to be computed"
license = "MIT"
repository = "https://github.com/RGafiyatullin/measured-future-rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
stat = "^0.2"
futures = "^0.3"

[dev-dependencies]
tokio = {version = "~0.2", features = ["full"]}
num_cpus = "^1"